Update changes - deploy to Vercel

--- a/confirmacion.html
+++ b/confirmacion.html
@@ -219,9 +219,9 @@
                 <div class="footer-col">
                     <h4 class="footer-title">Contacto</h4>
                     <ul class="footer-contact">
-                        <li><i class="fas fa-phone"></i> +1 234 567 890</li>
+                        <li><i class="fas fa-phone"></i> 7293 2253</li>
                         <li><i class="fas fa-envelope"></i> info@fzstore.com</li>
-                        <li><i class="fas fa-map-marker-alt"></i> Ciudad, País</li>
+                        <li><i class="fas fa-map-marker-alt"></i> costa Rica, San Jose</li>
                         <li><i class="fas fa-clock"></i> Lun-Vie: 9:00-18:00</li>
                     </ul>
                 </div>
@@ -239,10 +239,7 @@
 <div class="copyright">
                     <p>&copy; 2024 F&Z Store. Todos los derechos reservados.</p>
                 </div>
-                <div class="footer-legal">
-                    <a href="#">Términos y Condiciones</a>
-                    <a href="#">Política de Privacidad</a>
-                    <a href="#">Aviso Legal</a>
+              
                 </div>
             </div>
         </div>
