--- a/index.html
+++ b/index.html
@@ -145,17 +145,27 @@
   </footer>
 
   <!-- Firebase -->
-  <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-auth-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js" defer></script>
+  <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-auth-compat.js" defer></script>
+  <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore-compat.js" defer></script>
 
-  <!-- Scripts -->
-    <script src="js/helpers.js"></script>
-  <script src="js/firebase-config.js"></script>
-  <script src="js/auth.js"></script>
-  <script src="js/carrito.js"></script>
-  <script src="js/productos.js"></script>
-  <script src="js/app.js"></script>
+  <!-- Scripts con defer para no bloquear parsing -->
+  <script src="js/helpers.js" defer></script>
+  <script src="js/performance-config.js" defer></script>
+  <script src="js/firebase-config.js" defer></script>
+  <script src="js/auth.js" defer></script>
+  <script src="js/carrito.js" defer></script>
+  <script src="js/productos.js" defer></script>
+  <script src="js/app.js" defer></script>
+
+  <!-- Service Worker para caché -->
+  <script>
+    if ('serviceWorker' in navigator) {
+      window.addEventListener('load', () => {
+        navigator.serviceWorker.register('/sw.js').catch(() => {});
+      });
+    }
+  </script>
 
   <script>
     // Carrusel mínimo (no choca con app.js)
