Fix checkout layout: move order-summary to checkout-right column

--- a/finalizarcompra.html
+++ b/finalizarcompra.html
@@ -240,8 +240,10 @@
                             </div>
                         </div>
                     </section>
+                </div>
 
-                    <!-- Resumen del Pedido (movido debajo del Método de Pago) -->
+                <!-- Columna Derecha: Resumen del Pedido -->
+                <div class="checkout-right">
                     <div class="order-summary">
                         <h2 class="summary-title">
                             <i class="fas fa-receipt"></i> Resumen del Pedido
