--- a/finalizarcompra.html
+++ b/finalizarcompra.html
@@ -234,6 +234,26 @@
                                 <div class="method-content" id="2checkout-content">
                                     <div class="payment-info">
                                         <p>Paga de forma segura con 2Checkout - Opciones de pago flexibles para Costa Rica</p>
+                                        <form id="payment-method-form" style="display: none;">
+                                            <div class="form-group">
+                                                <label for="cardNumber">Número de Tarjeta</label>
+                                                <input type="text" id="cardNumber" name="cardNumber" placeholder="0000 0000 0000 0000" maxlength="19">
+                                            </div>
+                                            <div class="form-row">
+                                                <div class="form-group">
+                                                    <label for="expMonth">Mes</label>
+                                                    <input type="text" id="expMonth" name="expMonth" placeholder="MM" maxlength="2">
+                                                </div>
+                                                <div class="form-group">
+                                                    <label for="expYear">Año</label>
+                                                    <input type="text" id="expYear" name="expYear" placeholder="YY" maxlength="2">
+                                                </div>
+                                                <div class="form-group">
+                                                    <label for="cvv">CVV</label>
+                                                    <input type="text" id="cvv" name="cvv" placeholder="000" maxlength="4">
+                                                </div>
+                                            </div>
+                                        </form>
                                         <div id="2checkout-button-container"></div>
                                     </div>
                                 </div>
