--- a/finalizarcompra.html
+++ b/finalizarcompra.html
@@ -17,10 +17,8 @@
     <link rel="stylesheet" href="css/checkout-modern.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     
-    <!-- 2Checkout SDK -->
-    <script src="https://www.2checkout.com/static/v1/2checkout.js"></script>
-    
-    <!-- PayPal SDK -->
+    <!-- PayPal SDK (cargado dinámicamente en checkout.js) -->
+    <!-- 2Checkout SDK (cargado dinámicamente en checkout.js) -->
 </head>
 <body>
     <!-- Header -->
