--- a/finalizarcompra.html
+++ b/finalizarcompra.html
@@ -232,7 +232,7 @@
                                 <div class="method-content" id="2checkout-content">
                                     <div class="payment-info">
                                         <p>Paga de forma segura con 2Checkout - Opciones de pago flexibles para Costa Rica</p>
-                                        <form id="payment-method-form" style="display: none;">
+                                        <form id="payment-method-form">
                                             <div class="form-group">
                                                 <label for="cardNumber">Número de Tarjeta</label>
                                                 <input type="text" id="cardNumber" name="cardNumber" placeholder="0000 0000 0000 0000" maxlength="19">
@@ -251,8 +251,8 @@
                                                     <input type="text" id="cvv" name="cvv" placeholder="000" maxlength="4">
                                                 </div>
                                             </div>
+                                            <div id="2checkout-button-container"></div>
                                         </form>
-                                        <div id="2checkout-button-container"></div>
                                     </div>
                                 </div>
                             </div>
