Remove separate card method: PayPal handles credit cards automatically

--- a/finalizarcompra.html
+++ b/finalizarcompra.html
@@ -201,63 +201,14 @@
                                         </div>
                                         <div class="method-details">
                                             <h3 class="method-name">PayPal</h3>
-                                            <p class="method-description">Paga rápido y seguro con PayPal</p>
+                                            <p class="method-description">Paga con PayPal o Tarjeta de Crédito</p>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="method-content active" id="paypal-content">
                                     <div class="paypal-info">
-                                        <p>Serás redirigido a PayPal para completar tu pago de forma segura.</p>
+                                        <p>Puedes pagar con PayPal, tarjeta de crédito o débito. Selecciona tu método al finalizar.</p>
                                         <div id="paypal-button-container"></div>
-                                    </div>
-                                </div>
-                            </div>
-                            
-                            <div class="payment-method" data-method="card">
-                                <div class="method-header">
-                                    <div class="method-radio">
-                                        <input type="radio" name="payment-method" id="card-method">
-                                    </div>
-                                    <div class="method-info">
-                                        <div class="method-icon">
-                                            <i class="fas fa-credit-card"></i>
-                                        </div>
-                                        <div class="method-details">
-                                            <h3 class="method-name">Tarjeta de Crédito</h3>
-                                            <p class="method-description">Visa, MasterCard, American Express</p>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="method-content" id="card-content">
-                                    <div class="card-info">
-                                        <p style="margin-bottom: 1.5rem;">Pago seguro y rápido con tu tarjeta de crédito</p>
-                                        <form id="card-form" class="checkout-form">
-                                            <div class="form-group">
-                                                <label for="cardName">Nombre en la Tarjeta *</label>
-                                                <input type="text" id="cardName" name="cardName" placeholder="Juan García" required>
-                                            </div>
-                                            <div class="form-group">
-                                                <label for="cardNumber">Número de Tarjeta *</label>
-                                                <input type="text" id="cardNumber" name="cardNumber" placeholder="0000 0000 0000 0000" maxlength="19" required>
-                                            </div>
-                                            <div class="form-row">
-                                                <div class="form-group">
-                                                    <label for="expMonth">Mes *</label>
-                                                    <input type="text" id="expMonth" name="expMonth" placeholder="MM" maxlength="2" required>
-                                                </div>
-                                                <div class="form-group">
-                                                    <label for="expYear">Año *</label>
-                                                    <input type="text" id="expYear" name="expYear" placeholder="YYYY" maxlength="4" required>
-                                                </div>
-                                                <div class="form-group">
-                                                    <label for="cvv">CVV *</label>
-                                                    <input type="text" id="cvv" name="cvv" placeholder="000" maxlength="4" required>
-                                                </div>
-                                            </div>
-                                            <button type="button" class="btn btn-primary btn-pay" id="card-pay-btn">
-                                                <i class="fas fa-lock"></i> Pagar Ahora
-                                            </button>
-                                        </form>
                                     </div>
                                 </div>
                             </div>
