--- a/finalizarcompra.html
+++ b/finalizarcompra.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self' https:; img-src 'self' https: data:; style-src 'self' 'unsafe-inline' https:; script-src 'self' 'unsafe-inline' https: https://www.paypal.com; connect-src 'self' https:; font-src 'self' https: data:; object-src 'none'; base-uri 'self'; frame-ancestors 'self'; frame-src https://www.paypal.com;">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self' https:; img-src 'self' https: data:; style-src 'self' 'unsafe-inline' https:; script-src 'self' 'unsafe-inline' 'unsafe-eval' https: https://www.paypal.com https://www.sandbox.paypal.com https://c.paypal.com https://t.paypal.com; connect-src 'self' https: https://www.paypal.com https://www.sandbox.paypal.com https://api.paypal.com https://api.sandbox.paypal.com https://c.paypal.com; font-src 'self' https: data:; object-src 'none'; base-uri 'self'; frame-ancestors 'self'; frame-src 'self' https: https://www.paypal.com https://www.sandbox.paypal.com https://c.paypal.com;">
     <meta name="referrer" content="strict-origin-when-cross-origin">
     <meta http-equiv="Permissions-Policy" content="geolocation=(), microphone=(), camera=()">
 <title>Finalizar Compra - F&Z Store</title>
