--- a/finalizarcompra.html
+++ b/finalizarcompra.html
@@ -356,6 +356,7 @@
     <script src="js/firebase-config.js"></script>
     <script src="js/auth.js"></script>
     <script src="js/carrito.js"></script>
+    <script src="js/paypal-module.js"></script>
     <script src="js/checkout.js"></script>
     <script src="js/app.js"></script>
 </body>
