--- a/finalizarcompra.html
+++ b/finalizarcompra.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     
     <!-- PayPal SDK (cargado dinámicamente en checkout.js) -->
+    <script src="js/verificador-paypal.js"></script>
 </head>
 <body>
     <!-- Header -->
