PayPal v3.0 - Reescrito completamente desde cero
CAMBIOS PRINCIPALES:
- paypal-simple.js: Módulo nuevo, 100% más simple
- checkout-v3.js: Checkout refactorizado y simplificado
- Removidas todas las complejidades innecesarias
- Mejor manejo de errores
- Código más directo y fácil de debuguear

VERSIONES ANTERIORES GUARDADAS:
- paypal-module-v2-BACKUP.js
- checkout-v2-BACKUP.js

VENTAJAS v3.0:
 Menos código (200 líneas vs 700)
 Más fácil de debuguear
 Mejor manejo de promesas
 Mejor logging
 Sin abstracciones innecesarias

--- a/finalizarcompra.html
+++ b/finalizarcompra.html
@@ -357,8 +357,9 @@
     <script src="js/firebase-config.js"></script>
     <script src="js/auth.js"></script>
     <script src="js/carrito.js"></script>
-    <script src="js/paypal-module.js"></script>
-    <script src="js/checkout.js"></script>
+    <script src="js/paypal-simple.js"></script>
+    <script src="js/checkout-v3.js"></script>
+    <script src="js/verificador-paypal.js"></script>
     <script src="js/app.js"></script>
 </body>
 </html>
