--- a/finalizarcompra.html
+++ b/finalizarcompra.html
@@ -12,7 +12,7 @@
         * { margin: 0; padding: 0; box-sizing: border-box; }
         
         body {
-            background: #FF00FF;
+            background: #00FF00;
             font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
         }
 
