--- a/finalizarcompra.html
+++ b/finalizarcompra.html
@@ -12,8 +12,9 @@
         * { margin: 0; padding: 0; box-sizing: border-box; }
         
         body {
-            background: #f8f9fa;
-            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+            background: linear-gradient(135deg, #0a0a0a 0%, #1a1a1a 100%);
+            font-family: 'Poppins', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
+            color: #ffffff;
         }
 
         .checkout-container {
@@ -27,17 +28,19 @@
             text-align: center;
             margin-bottom: 40px;
             padding: 20px 0;
-            border-bottom: 2px solid #ecf0f1;
+            border-bottom: 2px solid #333333;
         }
 
         .checkout-header h1 {
             font-size: 28px;
-            color: #2c3e50;
+            color: #ffffff;
             margin-bottom: 10px;
+            font-family: 'Montserrat', sans-serif;
+            font-weight: 600;
         }
 
         .checkout-header p {
-            color: #7f8c8d;
+            color: #cccccc;
             font-size: 14px;
         }
 
@@ -61,35 +64,39 @@
             width: 40px;
             height: 40px;
             border-radius: 50%;
-            background: #ecf0f1;
-            color: #7f8c8d;
+            background: #333333;
+            color: #888888;
             display: flex;
             align-items: center;
             justify-content: center;
             font-weight: bold;
             margin: 0 auto 8px;
             transition: all 0.3s ease;
+            border: 2px solid #444444;
         }
 
         .progress-step.active .progress-step-number {
-            background: #3498db;
+            background: #8a4af3;
             color: white;
+            border-color: #8a4af3;
             transform: scale(1.1);
+            box-shadow: 0 0 20px rgba(138, 74, 243, 0.3);
         }
 
         .progress-step.completed .progress-step-number {
-            background: #27ae60;
+            background: #2ecc71;
             color: white;
+            border-color: #2ecc71;
         }
 
         .progress-step-text {
             font-size: 12px;
-            color: #7f8c8d;
+            color: #888888;
             font-weight: 500;
         }
 
         .progress-step.active .progress-step-text {
-            color: #3498db;
+            color: #8a4af3;
         }
 
         /* Main Layout */
@@ -108,16 +115,16 @@
 
         /* Sections */
         .checkout-section {
-            background: white;
-            border-radius: 8px;
+            background: #1e1e1e;
+            border-radius: 10px;
             padding: 24px;
             margin-bottom: 24px;
-            border: 1px solid #ecf0f1;
+            border: 1px solid #333333;
             transition: box-shadow 0.3s ease;
         }
 
         .checkout-section:hover {
-            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 5px 15px rgba(138, 74, 243, 0.1);
         }
 
         .section-header {
@@ -125,19 +132,21 @@
             align-items: center;
             margin-bottom: 20px;
             padding-bottom: 12px;
-            border-bottom: 2px solid #ecf0f1;
+            border-bottom: 2px solid #333333;
         }
 
         .section-header h2 {
             font-size: 18px;
-            color: #2c3e50;
+            color: #ffffff;
             display: flex;
             align-items: center;
             gap: 8px;
+            font-family: 'Montserrat', sans-serif;
+            font-weight: 600;
         }
 
         .section-header i {
-            color: #3498db;
+            color: #8a4af3;
             font-size: 20px;
         }
 
@@ -162,7 +171,7 @@
             display: block;
             margin-bottom: 6px;
             font-weight: 500;
-            color: #2c3e50;
+            color: #cccccc;
             font-size: 13px;
         }
 
@@ -170,19 +179,25 @@
         .form-group select {
             width: 100%;
             padding: 10px 12px;
-            border: 1px solid #bdc3c7;
-            border-radius: 4px;
+            border: 1px solid #444444;
+            border-radius: 6px;
             font-size: 14px;
             transition: all 0.3s ease;
             font-family: inherit;
+            background: #2a2a2a;
+            color: #ffffff;
+        }
+
+        .form-group input::placeholder {
+            color: #666666;
         }
 
         .form-group input:focus,
         .form-group select:focus {
             outline: none;
-            border-color: #3498db;
-            box-shadow: 0 0 0 3px rgba(52, 152, 219, 0.1);
-            background: #f8fbff;
+            border-color: #8a4af3;
+            box-shadow: 0 0 0 3px rgba(138, 74, 243, 0.15);
+            background: #333333;
         }
 
         .form-group input:invalid {
@@ -192,7 +207,7 @@
         /* Messages */
         .message-box {
             padding: 12px 16px;
-            border-radius: 4px;
+            border-radius: 6px;
             margin-bottom: 16px;
             display: none;
             border-left: 4px solid;
@@ -204,21 +219,21 @@
         }
 
         .message-box.error {
-            background: #f8d7da;
-            border-left-color: #f5c6cb;
-            color: #721c24;
+            background: rgba(231, 76, 60, 0.1);
+            border-left-color: #e74c3c;
+            color: #ff9999;
         }
 
         .message-box.success {
-            background: #d4edda;
-            border-left-color: #c3e6cb;
-            color: #155724;
+            background: rgba(46, 204, 113, 0.1);
+            border-left-color: #2ecc71;
+            color: #90ee90;
         }
 
         .message-box.info {
-            background: #d1ecf1;
-            border-left-color: #bee5eb;
-            color: #0c5460;
+            background: rgba(52, 152, 219, 0.1);
+            border-left-color: #3498db;
+            color: #87ceeb;
         }
 
         /* Buttons */
@@ -232,7 +247,7 @@
             flex: 1;
             padding: 12px 20px;
             border: none;
-            border-radius: 4px;
+            border-radius: 6px;
             font-size: 14px;
             font-weight: 600;
             cursor: pointer;
@@ -244,29 +259,31 @@
         }
 
         .btn-primary {
-            background: #3498db;
+            background: linear-gradient(135deg, #8a4af3 0%, #ff4081 100%);
             color: white;
         }
 
         .btn-primary:hover {
-            background: #2980b9;
             transform: translateY(-2px);
-            box-shadow: 0 4px 12px rgba(52, 152, 219, 0.3);
+            box-shadow: 0 6px 20px rgba(138, 74, 243, 0.4);
         }
 
         .btn-primary:disabled {
-            background: #bdc3c7;
+            background: #444444;
             cursor: not-allowed;
             transform: none;
+            box-shadow: none;
         }
 
         .btn-secondary {
-            background: #ecf0f1;
-            color: #2c3e50;
+            background: #333333;
+            color: #cccccc;
+            border: 1px solid #444444;
         }
 
         .btn-secondary:hover {
-            background: #bdc3c7;
+            background: #444444;
+            color: #ffffff;
         }
 
         /* Summary Sidebar */
@@ -276,19 +293,21 @@
         }
 
         .summary-card {
-            background: white;
-            border-radius: 8px;
+            background: #1e1e1e;
+            border-radius: 10px;
             padding: 20px;
-            border: 1px solid #ecf0f1;
+            border: 1px solid #333333;
         }
 
         .summary-card h3 {
             font-size: 16px;
-            color: #2c3e50;
+            color: #ffffff;
             margin-bottom: 16px;
             display: flex;
             align-items: center;
             gap: 8px;
+            font-family: 'Montserrat', sans-serif;
+            font-weight: 600;
         }
 
         .summary-items {
@@ -296,7 +315,7 @@
             overflow-y: auto;
             margin-bottom: 16px;
             padding-bottom: 16px;
-            border-bottom: 1px solid #ecf0f1;
+            border-bottom: 1px solid #333333;
         }
 
         .summary-item {
@@ -304,15 +323,17 @@
             gap: 8px;
             margin-bottom: 12px;
             font-size: 13px;
+            color: #cccccc;
         }
 
         .summary-item-image {
             width: 50px;
             height: 50px;
-            background: #f0f0f0;
-            border-radius: 4px;
+            background: #2a2a2a;
+            border-radius: 6px;
             flex-shrink: 0;
             overflow: hidden;
+            border: 1px solid #333333;
         }
 
         .summary-item-image img {
@@ -327,18 +348,18 @@
 
         .summary-item-name {
             font-weight: 500;
-            color: #2c3e50;
+            color: #ffffff;
             margin-bottom: 4px;
         }
 
         .summary-item-details {
-            color: #7f8c8d;
+            color: #888888;
             font-size: 12px;
         }
 
         .summary-item-price {
             font-weight: 600;
-            color: #2c3e50;
+            color: #8a4af3;
             text-align: right;
         }
 
@@ -352,21 +373,21 @@
             display: flex;
             justify-content: space-between;
             font-size: 13px;
-            color: #7f8c8d;
+            color: #cccccc;
         }
 
         .summary-row.total {
             font-size: 16px;
             font-weight: bold;
-            color: #2c3e50;
-            border-top: 1px solid #ecf0f1;
+            color: #ffffff;
+            border-top: 1px solid #333333;
             padding-top: 8px;
             margin-top: 8px;
         }
 
         .summary-row.usd {
             font-size: 12px;
-            color: #95a5a6;
+            color: #888888;
         }
 
         /* Payment Methods */
@@ -381,10 +402,11 @@
             align-items: center;
             gap: 12px;
             padding: 16px;
-            border: 2px solid #ecf0f1;
-            border-radius: 4px;
+            border: 2px solid #333333;
+            border-radius: 6px;
             cursor: pointer;
             transition: all 0.3s ease;
+            background: #2a2a2a;
         }
 
         .payment-method input {
@@ -393,13 +415,13 @@
         }
 
         .payment-method:hover {
-            border-color: #3498db;
-            background: #f8fbff;
+            border-color: #8a4af3;
+            background: rgba(138, 74, 243, 0.05);
         }
 
         .payment-method.selected {
-            border-color: #3498db;
-            background: #f0f7ff;
+            border-color: #8a4af3;
+            background: rgba(138, 74, 243, 0.1);
         }
 
         .payment-method-info {
@@ -408,25 +430,25 @@
 
         .payment-method-title {
             font-weight: 600;
-            color: #2c3e50;
+            color: #ffffff;
             margin-bottom: 2px;
         }
 
         .payment-method-desc {
             font-size: 12px;
-            color: #7f8c8d;
+            color: #888888;
         }
 
         .payment-method-icon {
             font-size: 24px;
-            color: #3498db;
+            color: #8a4af3;
         }
 
         /* PayPal Button Container */
         #paypal-button-container {
             margin-top: 16px;
             padding: 12px;
-            background: #f8fbff;
+            background: rgba(138, 74, 243, 0.05);
             border-radius: 4px;
             border: 1px dashed #3498db;
         }
