--- a/confirmacion.html
+++ b/confirmacion.html
@@ -171,6 +171,12 @@
                         <p>Tu pedido se enviará en embalaje discreto y seguro.</p>
                     </div>
                 </div>
+
+                <!-- DEBUG: Mostrar localStorage -->
+                <div style="margin-top: 30px; padding: 20px; background: #2a2a2a; border: 1px solid #444; border-radius: 8px; color: #ccc; font-size: 12px; max-height: 300px; overflow-y: auto;">
+                    <strong>🐛 DEBUG localStorage:</strong>
+                    <div id="debug-storage" style="margin-top: 10px; font-family: monospace; white-space: pre-wrap; word-break: break-all;"></div>
+                </div>
             </div>
         </div>
     </main>
