FIX: Unificar referencias de módulos PayPal y Checkout
- Cambiar checkout-v3.js  checkout.js (v4.0, más mejorado)
- Cambiar paypal-module.js  paypal-simple.js (consistencia)
- Actualizar: finalizarcompra.html, finalizarcompra-mejorado.html
- Actualizar: diagnostico-paypal.html, simulador-checkout.html
- Actualizar: test-aislado.html, test-paypal-simple.html

Esto elimina duplicación y confusión de versiones.

--- a/simulador-checkout.html
+++ b/simulador-checkout.html
@@ -94,7 +94,7 @@
     <script src="js/firebase-config.js"></script>
     <script src="js/auth.js"></script>
     <script src="js/carrito.js"></script>
-    <script src="js/paypal-module.js"></script>
+    <script src="js/paypal-simple.js"></script>
     <script src="js/checkout.js"></script>
     <script src="js/verificador-paypal.js"></script>
 
