--- a/test-aislado.html
+++ b/test-aislado.html
@@ -63,7 +63,7 @@
     <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore-compat.js"></script>
     
     <script src="js/firebase-config.js"></script>
-    <script src="js/paypal-module.js"></script>
+    <script src="js/paypal-simple.js"></script>
 
     <script>
         function log(type, msg, data = null) {
