--- a/test-paypal-simple.html
+++ b/test-paypal-simple.html
@@ -143,7 +143,7 @@
 
     <!-- Cargar scripts -->
     <script src="js/firebase-config.js"></script>
-    <script src="js/paypal-module.js"></script>
+    <script src="js/paypal-simple.js"></script>
 
     <script>
         function setTest(id, status, message) {
