--- a/diagnostico-paypal.html
+++ b/diagnostico-paypal.html
@@ -355,7 +355,7 @@
     <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore-compat.js"></script>
     
     <script src="js/firebase-config.js"></script>
-    <script src="js/paypal-module.js"></script>
+    <script src="js/paypal-simple.js"></script>
     <script src="js/checkout.js"></script>
 </body>
 </html>
