--- a/finalizarcompra-mejorado.html
+++ b/finalizarcompra-mejorado.html
@@ -648,7 +648,7 @@
     <script src="js/auth.js"></script>
     <script src="js/carrito.js"></script>
     <script src="js/paypal-simple.js"></script>
-    <script src="js/checkout-v3.js"></script>
+    <script src="js/checkout.js"></script>
     <script src="js/verificador-paypal.js"></script>
     <script src="js/app.js"></script>
 </body>
